--- a/package.json
+++ b/package.json
@@ -14,6 +14,6 @@
     "express": "^4.16.4",
     "express-graphql": "^0.7.1",
     "graphql": "^14.1.1",
-    "mongoose": "^5.4.19"
+    "mongoose": ">=5.7.5"
   }
 }
